<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextLastname"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/editTextFirstname"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/editTextEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/editTextAddress"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/editTextPostalCode"
            android:hint="@string/postal_code"
            android:inputType="textPostalAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/editTextCity"
            android:hint="@string/city"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/editTextFidelityCard"
            android:hint="@string/fidelity_card"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>