<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movie_list.MovieDetailsActivity"
    android:orientation="vertical"
    android:background="@android:color/black">
    <include
        layout="@layout/layout_header"
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/textViewGraphicUrl"
                android:layout_height="300dp"
                android:layout_width="match_parent"/>

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/timeMovie"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/descMovie"
                android:layout_margin="20dp"/>

            <Button
                android:id="@+id/clickCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/addCart"
                android:layout_margin="20dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>